# multithreading-os

./: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  barrera.cpp  barrera.h  config.cpp  config.h  definiciones.h  equipo.cpp  equipo.h  gameMaster.cpp  gameMaster.h  main.cpp  resultado.txt  resultado2.txt  resultado3.txt  resultadoRR.txt  resultadoSECUENCIAL.txt  resultadoSHORTEST.txt  resultadoUDS.txt
config/: config_parameters.csv  documentacion.txt
docs/: index.html
tests/: testBarrera.cpp  testBelcebu.cpp  testEquipo.cpp  testGame.cpp  testmain.cpp
